<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ManCoin</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="period_1h">12H</string>
    <string name="period_1day">1D</string>
    <string name="period_1week">1W</string>
    <string name="period_1month">1M</string>
    <string name="period_3month">3M</string>
    <string name="period_1year">1Y</string>
    <string name="period_all">ALL</string>
</resources>
