<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txt_price_md_chart"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/text_primary_dark"
        android:textSize="@dimen/textStyleLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="$100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_plus_or_down_md_chart"
        android:text="▲"
        android:gravity="center_horizontal"
        android:textColor="@color/greenColor"
        android:textSize="@dimen/textStyleMedium"
        app:layout_constraintTop_toBottomOf="@+id/txt_price_md_chart"
        app:layout_constraintStart_toStartOf="@+id/txt_price_md_chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_change_price_md_chart"
        app:layout_constraintStart_toEndOf="@+id/txt_plus_or_down_md_chart"
        app:layout_constraintTop_toBottomOf="@+id/txt_price_md_chart"
        android:textSize="@dimen/textStyleMedium"
        android:text="$1.02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_percent_change_md_chart"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/txt_price_md_chart"
        app:layout_constraintStart_toEndOf="@id/txt_change_price_md_chart"
        android:textColor="@color/greenColor"
        android:textSize="@dimen/textStyleMedium"
        android:text="+ 8%"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.robinhood.spark.SparkView
        android:id="@+id/chart_coin_md_chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:spark_lineColor="@color/primary_dark"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:spark_scrubEnabled="true"
        app:spark_animateChanges="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_plus_or_down_md_chart"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_error_chart_loaded_md_chart"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/chart_coin_md_chart"
        app:layout_constraintEnd_toEndOf="@+id/chart_coin_md_chart"
        app:layout_constraintTop_toTopOf="@+id/chart_coin_md_chart"
        app:layout_constraintStart_toStartOf="@id/chart_coin_md_chart"
        android:textColor="@color/redColor"
        android:textSize="@dimen/textStyleMedium"
        android:text="Chart Don't Loaded!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/radio_group_md_chart"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:weightSum="7"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/chart_coin_md_chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <RadioButton
            android:id="@+id/radio_12h_md_chart"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1h"
            android:textStyle="bold"
            android:textSize="@dimen/textStyleSmall"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:paddingStart="8dp"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_1day_md_chart"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1day"
            android:textStyle="bold"
            android:textSize="@dimen/textStyleSmall"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:paddingStart="8dp"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_1week_md_chart"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1week"
            android:textStyle="bold"
            android:textSize="@dimen/textStyleSmall"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:paddingStart="8dp"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_1month_md_chart"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1month"
            android:textStyle="bold"
            android:textSize="@dimen/textStyleSmall"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:paddingStart="8dp"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_3month_md_chart"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_3month"
            android:textStyle="bold"
            android:textSize="@dimen/textStyleSmall"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:paddingStart="8dp"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_1year_md_chart"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_1year"
            android:textStyle="bold"
            android:textSize="@dimen/textStyleSmall"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:paddingStart="8dp"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_height="48dp"/>
        <RadioButton
            android:id="@+id/radio_all_md_chart"
            android:textColor="@drawable/range_radio_btn_selector"
            android:text="@string/period_all"
            android:textStyle="bold"
            android:textSize="@dimen/textStyleSmall"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:paddingStart="8dp"
            android:gravity="center"
            android:paddingEnd="8dp"
            android:button="@null"
            android:background="@drawable/range_radio_btn_selector_background"
            android:layout_height="48dp"/>

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>